[package]
name = "pyenv-python"
version = "0.3.1"
authors = ["Khyber Sen <kkysen@gmail.com>"]
edition = "2018"
description = "A pyenv shim for python that's much faster than pyenv."
license = "MIT"
repository = "https://github.com/kkysen/pyenv-python"
homepage = "https://github.com/kkysen/pyenv-python/blob/master/README.md"
readme = "README.md"
categories = ["command-line-utilities"]
keywords = ["python", "pyenv"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
print_bytes = "0.4.2"
same-file = "1.0.6"
is_executable = "1.0.1"
thiserror = "1.0.25"
anyhow = "1.0.40"
apply = "0.3.0"

[profile.release]
lto = true
panic = "abort"
opt-level = "z"
